test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/incomplete_types/subscript_void_pointer_conditional.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[4]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: arr
                  CCompoundInit: 
                    List[3]: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 1
                          None: 
                        None: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 2
                          None: 
                        None: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 3
                          None: 
                        None: 
                    None: 
                  Array: 
                    TLong: 3
                    Int: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: void_ptr
                  CSingleInit: 
                    CVar: 
                      TIdentifier: arr
                      None: 
                    None: 
                  Pointer: 
                    Void: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: int_ptr
                  CSingleInit: 
                    CBinary: 
                      CAdd: 
                      CVar: 
                        TIdentifier: arr
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 1
                        None: 
                      None: 
                    None: 
                  Pointer: 
                    Int: 
                  None: 
            CS: 
              CReturn: 
                CSubscript: 
                  CConditional: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    CVar: 
                      TIdentifier: int_ptr
                      None: 
                    CVar: 
                      TIdentifier: void_ptr
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 1
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
